--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,14 +1,24 @@
 name: dart_nvim
 description: A starting point for Dart libraries or applications.
 version: 1.0.0
+publish_to: none
 # repository: https://github.com/my_org/my_repo
 
 environment:
   sdk: '>=2.19.1 <3.0.0'
 
-# dependencies:
-#   path: ^1.8.0
+dependencies:
+  msgpack_dart:
+    git:
+      url: https://github.com/SilverMira/msgpack_dart
+      ref: stream
 
 dev_dependencies:
+  args: ^2.4.0
+  code_builder: ^4.4.0
+  dart_style: ^2.2.4
+  json_sorter: ^1.0.0
   lints: ^2.0.0
+  path: ^1.8.3
+  recase: ^4.1.0
   test: ^1.21.0
