--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,9 +5,10 @@ publish_to: none
 # repository: https://github.com/my_org/my_repo
 
 environment:
-  sdk: '>=2.19.1 <3.0.0'
+  sdk: '>=3.0.0 <4.0.0'
 
 dependencies:
+  freezed_annotation: ^2.4.1
   msgpack_dart:
     git:
       url: https://github.com/SilverMira/msgpack_dart
@@ -15,8 +16,11 @@ dependencies:
 
 dev_dependencies:
   args: ^2.4.0
+  build: ^2.4.1
+  build_runner: ^2.4.6
   code_builder: ^4.4.0
   dart_style: ^2.2.4
+  freezed: ^2.4.2
   json_sorter: ^1.0.0
   lints: ^2.0.0
   path: ^1.8.3
